--- a/config.ini
+++ b/config.ini
@@ -2,5 +2,5 @@
 servidor = data-engineer-cluster.cyhh5bfevlmn.us-east-1.redshift.amazonaws.com
 db = data-engineer-database
 puerto = 5439
-usuario = 
-clave = 
+usuario = marcocalle86_coderhouse
+clave = ouCZJ8c2z0
